gccida/c1/find_base_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1206:4: error: expected ';' after expression
rtx base_value; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1206:5: error: use of undeclared identifier 'base_value'
rtx base_value; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1207:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1207:5: error: use of undeclared identifier 'v10'
rtx v10; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1252:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = (  struct rtx_def *)rtx[1]; 
                         ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1257:1: error: use of undeclared identifier 'base_value'
base_value = find_base_value( rtx->fld[0].rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1258:6: error: use of undeclared identifier 'base_value'
if ( base_value ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1259:6: error: use of undeclared identifier 'base_value'
v2 = base_value; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1272:1: error: use of undeclared identifier 'v10'
v10 = find_base_value( v4); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1273:6: error: use of undeclared identifier 'v10'
if ( v10 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1274:6: error: use of undeclared identifier 'v10'
v4 = v10; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1313:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( __int64)src[1]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/alias.c:1334:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = (  struct rtx_def *)src[1]; 
                         ^~~~~~
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_base_value/src/obj/alias.o] Error 1
